<resources>
    <string name="app_name">Tweeter</string>
    <string name="action_settings">Settings</string>
    <string name="enter_username">Username</string>
    <string name="enter_pwd">Password</string>
    <string name="txt_login">Login</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="title_activity_tweets">Feed</string>
    <string name="no_tweet_found">No Tweet Found</string>
    <string name="tweet_text">Tweet</string>
    <string name="tweet_camera">Camera</string>
    <string name="tweet_gallery">Gallery</string>
    <string name="rt_character">®</string>
    <string name="reply_character">«</string>
    <string name="fav_character">★</string>
    <string name="title_activity_tweet">Tweet</string>
</resources>
