<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="0dp"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:orientation="vertical"
    android:weightSum="10"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_tweets"
    tools:context="twitter.sumit.com.twitterapp.TweetsActivity">

    <ListView
        android:id="@+id/tweets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
    </ListView>

    <LinearLayout
        android:id="@+id/tweet_block"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="3"
        android:background="#FEFEFE">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/tweet_text"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/tweet_camera"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/tweet_gallery"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>
