<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="twitter.sumit.com.twitterapp.TweetActivity"
    tools:showIn="@layout/activity_tweet">

    <LinearLayout
        android:id="@+id/rt_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/rt_character"
            android:textColor="@color/colorTextLightDull" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Sidu Ponnappa retweeted"
            android:textColor="@color/colorTextLightDull" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tweet_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorLoginBackground" />

        <LinearLayout
            android:id="@+id/tweet_body_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tweet_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Brian Tashman"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="briantashman"
                    android:textColor="@color/colorTextLightDull" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Speaker explains that Elsa is from the Devil and 'Let It Go' is Satan's anthem. Seriously"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="3:27 am"
            android:textColor="@color/colorTextLightDull"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="08 Nov 15"
            android:textColor="@color/colorTextLightDull"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/tweet_reply_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reply_character"
            android:textColor="@color/colorTextLightDull"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tweet_rt_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rt_character"
            android:textColor="@color/colorTextLightDull"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tweet_fav_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fav_character"
            android:textColor="@color/colorTextLightDull"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
